[workspace]
resolver = "2"
members = [
    "dll_injector",
    "github_helpers",
    "unreal_asset",
    "unreal_asset/unreal_asset_base",
    "unreal_asset/unreal_asset_properties",
    "unreal_asset/unreal_asset_kismet",
    "unreal_asset/unreal_asset_exports",
    "unreal_asset/unreal_asset_registry",
    "unreal_asset/unreal_asset_proc_macro",
    "unreal_cpp_bootstrapper",
    "unreal_helpers",
    "unreal_mod_integrator",
    "unreal_mod_manager",
    "unreal_mod_metadata",
]

[workspace.package]
version = "0.2.0"
authors = ["AstroTechies", "localcc", "konsti219"]
license = "MIT"
description = "Tools for making and loading Unreal Engine Mods."
repository = "https://github.com/AstroTechies/unrealmodding"

[workspace.dependencies]
dll_injector = { path = "./dll_injector" }
github_helpers = { path = "./github_helpers" }
unreal_asset = { path = "./unreal_asset" }
unreal_cpp_bootstrapper = { path = "./unreal_cpp_bootstrapper" }
unreal_asset_base = { path = "./unreal_asset/unreal_asset_base" }
unreal_asset_properties = { path = "./unreal_asset/unreal_asset_properties" }
unreal_asset_kismet = { path = "./unreal_asset/unreal_asset_kismet" }
unreal_asset_exports = { path = "./unreal_asset/unreal_asset_exports" }
unreal_asset_registry = { path = "./unreal_asset/unreal_asset_registry" }
unreal_asset_proc_macro = { path = "./unreal_asset/unreal_asset_proc_macro" }
unreal_helpers = { path = "./unreal_helpers" }
unreal_mod_integrator = { path = "./unreal_mod_integrator" }
unreal_mod_metadata = { path = "./unreal_mod_metadata" }

bitflags = "2.10.0"
bitvec = "1.0.1"
byteorder = "1.5.0"
enum_dispatch = "0.3.13"
lazy_static = "1.5.0"
log = "0.4.28"
num_enum = "0.7.5"
ordered-float = "5.1.0"
regex = "1.12.2"
repak = { git = "https://github.com/trumank/repak", rev = "66afc396d52c55731378b1141a8202d45a2f3e1e", version = "0.2.2" }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
semver = "1.0.27"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[patch.crates-io]
steamy-vdf = { git = "https://github.com/icewind1991/steamy" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
