[package]
name = "unreal_cpp_bootstrapper"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_cpp_bootstrapper"
documentation = "https://docs.rs/unreal_cpp_bootstrapper"
edition = "2021"

[dependencies]
unreal_helpers.workspace = true
unreal_mod_metadata.workspace = true

lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
repak.workspace = true

[build-dependencies]
cmake = "0.1.54"
git2 = "0.20.2"
github_helpers.workspace = true

[features]
gui = []
