[package]
name = "unreal_asset_base"
version.workspace = true
authors.workspace = true
description = "Base unreal_asset implementations"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/AstroTechies/unrealmodding/tree/main/unreal_asset/unreal_asset_base"
documentation = "https://docs.rs/unreal_asset_base"
edition = "2021"

[dependencies]
unreal_asset_proc_macro.workspace = true

unreal_helpers.workspace = true
unreal_helpers.features = ["bitvec", "guid", "path", "read_write"]

# containers/indexed_map
rustc-hash = "2.1.1"
slab = "0.4.11"

# compression
brotli = "8.0.2"
flate2 = "1.1.5"
lz4_flex = { version = "0.12.0", features = [
    "safe-decode",
    "safe-encode",
    "std",
], default-features = false }
zstd = "0.13.3"

naive-cityhash = "0.2.0"
ordered-float.workspace = true

num_enum.workspace = true
thiserror.workspace = true
byteorder.workspace = true
lazy_static.workspace = true
bitvec.workspace = true
bitflags.workspace = true
enum_dispatch.workspace = true
